--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   name             : "Justin Gong"
   avatar           : "https://avatars3.githubusercontent.com/u/29085635?s=400&u=d711d1e7ac6007b219e9c9e621f4cf56b4f00458&v=4"
   bio              : "Data Science Portfolio"
-  location         : "NYC/SF Bay Area"
+  location         : "New York City"
   email            :
   links:
     - label: "Email"
