--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    :  "air" # "default", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Justin Gong"
+title                    : "JJ Gong"
 title_separator          : "-"
-name                     : "Justin Gong"
-description              : "Data Science Portfolio"
+name                     : "Justin (JJ) Gong"
+description              : "Business Analyst/Data Analytics"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,9 +106,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Justin Gong"
+  name             : "Justin (JJ) Gong"
   avatar           : "https://avatars3.githubusercontent.com/u/29085635?s=400&u=d711d1e7ac6007b219e9c9e621f4cf56b4f00458&v=4"
-  bio              : "Data Science Portfolio"
+  bio              : "Business Analyst/Data Science Portfolio"
   location         : "New York City"
   email            :
   links:
