--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "JJ Gong"
 title_separator          : "-"
 name                     : "Justin (JJ) Gong"
-description              : "Business Analyst/Data Analytics"
+description              : "Business Intelligence/Data Analytics"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
