--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Justin (JJ) Gong"
   avatar           : "https://avatars3.githubusercontent.com/u/29085635?s=400&u=d711d1e7ac6007b219e9c9e621f4cf56b4f00458&v=4"
-  bio              : "Business Analyst/Data Science Portfolio"
+  bio              : "BI/Data Science Portfolio"
   location         : "New York City"
   email            :
   links:
