--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minimal-mistakes",
-  "version": "4.16.4",
+  "version": "^4.26.2",
   "description": "Minimal Mistakes 2 column Jekyll theme.",
   "repository": {
     "type": "git",
