--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
     url: /about/
   - title: "Resume"
     url: /resume/
-  - title: "Machine Learning Projects"
-    url: /machine-learning/
+  - title: "Posts"
+    url: /posts/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
